@@ -52,13 +52,21 @@ class tx_externalimport_transformations {
 	 */
 	function parseDate($record, $index, $params) {
 		$value = strtotime($record[$index]);
-		// Format value only if a function was defined
+			// Consider time zone offset
+			// This is necessary because TCEmain will subtract the time zone offset upon saving the data,
+			// so the offset must be added first to compensate for this
+			// NOTE: this correction was made dependent on a parameter (enforceTimeZone), but it might
+			// make sense to execute it all the time, given the context in which this method is called
+		if (!empty($GLOBALS['TYPO3_CONF_VARS']['SYS']['serverTimeZone']) && !empty($params['enforceTimeZone'])) {
+			$value += ($GLOBALS['TYPO3_CONF_VARS']['SYS']['serverTimeZone'] * 3600);
+		}
+			// Format value only if a function was defined
 		if (isset($params['function'])) {
-			// Use strtotime for formatting
+				// Use strftime for formatting
 			if ($params['function'] == 'strftime') {
 				$value = strftime($params['format'], $value);
 			}
-			// Otherwise use date
+				// Otherwise use date
 			else {
 				$value = date($params['format'], $value);
 			}
